objects/StorageItems__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>StorageItems</relationshipLabel>
        <relationshipName>StorageItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Storage</label>
        <referenceTo>Storage__c</referenceTo>
        <relationshipLabel>StorageItems</relationshipLabel>
        <relationshipName>StorageItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>StorageItems</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Storage__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StorageItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>